# Deposito_Manenti

Day10/rag_flow/: README.md  evaluate_crew.py  pyproject.toml  rag_system.py  ragas_results.csv
Day10/rag_flow/faiss_index/: index.faiss  index.pkl
Day10/rag_flow/output/: answer.md
Day10/rag_flow/src/rag_flow/: main.py
Day10/rag_flow/src/rag_flow/crews/rag_crew/: rag_crew.py
Day10/rag_flow/src/rag_flow/crews/rag_crew/config/: tasks.yaml
Day10/rag_flow/src/rag_flow/data/: rivoluzione_francese_01_cause_rivoluzione_francese.md  rivoluzione_francese_02_cronologia_1789_1799.md  rivoluzione_francese_03_protagonisti_e_figure_chiave.md  rivoluzione_francese_04_club_politici_e_correnti.md  rivoluzione_francese_05_costituzioni_e_istituzioni.md  rivoluzione_francese_06_il_terrore_1793_1794.md  rivoluzione_francese_07_guerre_rivoluzionarie_e_coalizioni.md  rivoluzione_francese_08_economia_assignats_e_mercato.md  rivoluzione_francese_09_societa_ruolo_delle_donne_e_dei_ceti.md  rivoluzione_francese_10_simboli_cultura_e_calendario.md  rivoluzione_francese_11_conseguenze_in_francia_e_in_europa.md  rivoluzione_francese_12_glossario_termini_chiave.md  rivoluzione_francese_13_vandea_religione_e_conflitto_civile.md
Day10/rag_flow/src/rag_flow/tools/: custom_tool.py
rag_flow/: .gitignore  pyproject.toml  ragas_results.csv  requirements.txt
rag_flow/src/rag_flow/: evaluate_crew.py  main.py  rag_system.py  streamlit_ai_chat_app.py  utils_qdrant.py
recap_day08/flow_crewai/: flow.png.html  output.md  pyproject.toml
recap_day08/flow_crewai/output/: answer.md
(+10 files in other folders)
