[project]
name = "rag_flow"
version = "0.1.0"
description = "rag_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
    "langchain-text-splitters",
    "langchain-community",
    "langchain-openai",
    "faiss-cpu",
    "langgraph",
    "PyPDF2",
    "ddgs",
    "python-dotenv",
    "openai",
    "ragas"
]


[project.scripts]
kickoff = "rag_flow.main:kickoff"
run_crew = "rag_flow.main:kickoff"
plot = "rag_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
